--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=mysqln
 DB_PORT=3306
 DB_DATABASE=laravel_8_api_crud
 DB_USERNAME=root
-DB_PASSWORD='Neverdown001'
+DB_PASSWORD='Never'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
